# Goose

./: .clang-format  CMakeLists.txt  Makefile
src/: CMakeLists.txt  main.cpp
src/dag/: Graph.hpp  Nodes.hpp  README.md  Rebind.hpp  Router.hpp
src/dag/examples/: Arithmetic.cpp  Middleware.cpp  Router.cpp  Strings.cpp  Version0.cpp
